@@ -1,15 +1,30 @@
 /*.o
 /*~
+/.dep_segment
 /ABOUT-NLS
 /Makefile
+/Makefile.DOS
 /Makefile.in
+/NMakefile
+/README
+/README.DOS
+/README.OS2
+/README.W32
+/SMakefile
 /aclocal.m4
 /autom4te.cache
+/build.sh.in
+/config.ami
 /config.h
+/config.h-vms
+/config.h.W32
 /config.h.in
 /config.log
 /config.status
+/configh.dos
 /configure
 /loadavg
 /make
+/remake-*.tar.bz2
+/remake-*.tar.gz
 /stamp-h1
