@@ -46,7 +46,7 @@ make_SOURCES =	ar.c arscan.c commands.c default.c dir.c expand.c file.c \
 		function.c getopt.c getopt1.c implicit.c job.c main.c \
 		misc.c read.c remake.c $(remote) rule.c signame.c \
 		strcache.c variable.c version.c vpath.c hash.c \
-		buildargv.c print.c trace.c \
+		buildargv.c debug.c print.c trace.c \
 	        debugger/break.c debugger/cmd.c debugger/fns.c \
 		debugger/info.c debugger/stack.c
 
@@ -54,7 +54,7 @@ EXTRA_make_SOURCES = vmsjobs.c remote-stub.c remote-cstms.c
 
 noinst_HEADERS = commands.h dep.h filedef.h job.h make.h rule.h variable.h \
 		debug.h getopt.h gettext.h hash.h \
-		buildargv.h expand.h file.h function.h read.h \
+		buildargv.h expand.h file.h function.h read.h vpath.h \
 	        debugger/break.h debugger/cmd.h debugger/fns.h \
 		debugger/info.h debugger/stack.h
 
