@@ -1,3 +1,7 @@
+Start adding remake code.
+
+
+
 GNU make NEWS                                               -*-indented-text-*-
   History of user-visible changes.
   28 July 2010
